--- a/styleguide/scss/custom/_layout-framework.scss
+++ b/styleguide/scss/custom/_layout-framework.scss
@@ -20,18 +20,7 @@ body {
         //------------------------------------//
         > div[role="grid"] {
 
-            @include sf-flexbox-grid(
-                $use-gutter: false
-            );
-
-            @include sf-flexbox-grid(
-                $from: tablet-portrait, 
-                $use-gutter: false
-            );
-
-            @include sf-flexbox-grid-elastic-gutter (
-                $use-gutter: false
-            );
+            @include sf-flexbox-grid();
 
             > [role="gridcell"] {
 
